--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run build --configuration production --base-href=/icoc-mypledge-web-app/
+          npm run build --base-href=/icoc-mypledge-web-app/
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
