--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -22,22 +22,22 @@ concurrency:
   cancel-in-progress: false
 
 jobs:
-  # Single deploy job since we're just deploying
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
-        uses: actions/checkout@v4
-      - name: Setup Pages
-        uses: actions/configure-pages@v5
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+        uses: actions/checkout@v3
+      - name: Setup Node.js
+        uses: actions/setup-node@v3 #this installs node and npm for us
         with:
-          # Upload entire repository
-          path: './dist/icoc-mypledge-web-app'
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          node-version: '20'
+      - name: Install and Build
+        run: |
+          npm install
+          npm run build --base-href=/icoc-mypledge-web-app/
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@releases/v4
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: dist/icoc-mypledge-web-app
