--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
-    "test": "ng test",
-    "deploy": "ng build --prod --base-href=/angular-ci-cd/"
+    "test": "ng test"
   },
   "private": true,
   "dependencies": {
