--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Install and Build
         run: |
           npm install
-          npm run build
+          npm run-script deploy
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@releases/v4
         with:
