--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "deploy": "ng build --prod --base-href=/icoc-mypledge-web-app/"
+    "deploy": "ng build --configuration production --base-href=/icoc-mypledge-web-app/"
   },
   "private": true,
   "dependencies": {
