--- a/angular.json
+++ b/angular.json
@@ -14,7 +14,7 @@
           "builder": "@angular/build:application",
           "options": {
             "browser": "src/main.ts",
-            "outputPath": "dist",
+            "outputPath": "dist/ng-deploy",
             "polyfills": [
               "zone.js"
             ],
