--- a/angular.json
+++ b/angular.json
@@ -69,7 +69,12 @@
               "buildTarget": "icoc-mypledge-web-app:build:development"
             }
           },
-          "defaultConfiguration": "development"
+          "defaultConfiguration": "development",
+
+            "options": {
+              "proxyConfig": "src/proxy.conf.json"
+            }
+
         },
         "extract-i18n": {
           "builder": "@angular/build:extract-i18n"
